# menu-gen

./: .gitignore  README.md
.github/workflows/: pages.yml  release.yml
app/: index.html  package-lock.json  package.json  vite.config.js
app/data/: dishes.yml  ingredients-draft.yml  prices.yml
app/public/: manifest.webmanifest  sw.js
app/scripts/: build-data.mjs  fetch-images.mjs  generate-icons.mjs  merge-ingredients.mjs  migrate-legacy.mjs
app/src/: app.js  generator.js  shopping.js  store.js  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
legacy/: menuGenerator.cs  menu_generator.txt  settings.yml  settings.yml.bak
legacy/toexe/: menuGenerator.py  menuGenerator.spec
